Mobile Nametag fix and Social Media Mobile spacing fix re: # 14 #16

--- a/stylesmedia.css
+++ b/stylesmedia.css
@@ -166,9 +166,8 @@ h1 {
   position: relative;
   line-height: 0.8;
   text-transform: uppercase;
-  font-weight: normal;
   letter-spacing: -2.5px;
-  font-size: 3rem;
+  font-size: 19vw;
 }
 
 .dev {
@@ -367,6 +366,7 @@ h1 {
   align-items: center;
   width: 100%;
   height: 100%;
+  margin-bottom: 1.5rem;
 }
 
 .border {
@@ -383,7 +383,6 @@ h1 {
   color: white;
   font-size: 1.5rem;
   text-transform: uppercase;
-  margin-bottom: 2rem;
 }
 
 .icon {
@@ -391,7 +390,6 @@ h1 {
   fill: white;
   width: 1.5rem;
   height: 1.5rem;
-  margin-bottom: 2rem;
   margin-right: 1rem;
 }
 /*QUERIES---------------------------------- */
@@ -553,11 +551,6 @@ h1 {
     width: 210px;
   }
 
-  .card-link:hover::after {
-    transition: 0.5s ease-in;
-    margin-bottom: -20px;
-  }
-
   .tarot-back {
     display: block;
     position: absolute;
@@ -571,6 +564,7 @@ h1 {
     top: 0;
     margin: 0 auto;
     padding: 5px;
+    margin-bottom: 0;
   }
 
   .tarot-front {
@@ -580,6 +574,7 @@ h1 {
     backface-visibility: hidden;
     background: black;
     transform: rotateY(180deg);
+    margin-bottom: 0;
   }
 
   .inactive .card-link {
@@ -634,7 +629,8 @@ h1 {
   .icon {
     position: absolute;
     fill: #ff4c00;
-    width: 35px;
+    width: 2rem;
+    height: 2rem;
     bottom: 1rem;
     left: 0;
     right: 0;
@@ -741,7 +737,7 @@ h1 {
   .timeline-list {
     position: relative;
     align-items: center;
-    max-width: 21%;
+    max-width: 18rem;
     margin: 0 auto;
     padding-top: 13rem;
     padding-bottom: 3rem;
